# crusher-design

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
assembly/: PE_400x600.yaml  crusher_assembly.py
catalog/: models.yaml  parts.yaml
docs/: ARCHITECTURE.md  HARDWARE.md  TRUST.md
infra/: setup_local.sh  vllm-coder.service  vllm-fast.service
knowledge/: failure_modes.yaml  manufacturing.yaml  materials.yaml  ores.yaml  sources.yaml  standards.yaml  wear_coefficients.yaml
knowledge/sources/: makeitfrom.yaml  techmakkers_internal.yaml
loop/: assembly_features.py  assembly_loop.py  dem_fitness.py  design_loop.py  fitness.py  fmea.py  mbd_to_fea.py  pareto.py  pareto_pymoo.py  sensitivity.py  surrogate_screening.py  synthetic_data.py  system_fitness.py  system_surrogate.py  wear_evolution.py
mcp-servers/assembly/: server.py
mcp-servers/dem/: server.py
mcp-servers/dfm/: server.py
mcp-servers/fea/: benchmark.py  calculix_deck.py  frd_parser.py  gmsh_mesher.py  server.py
mcp-servers/geometry/: server.py
mcp-servers/knowledge/: server.py
mcp-servers/mbd/: bearings.py  chrono_runner.py  dynamics.py  kinematics.py  server.py
memory/: MEMORY.md
memory/decisions/: README.md
tests/: test_assembly.py  test_assembly_loop.py  test_chrono_runner.py  test_fea_benchmark.py  test_fea_pipeline.py  test_fmea.py  test_ingest.py  test_mbd.py  test_mbd_integration.py  test_pareto_pymoo.py  test_sensitivity.py  test_smoke.py  test_surrogate_screening.py  test_system_surrogate.py  test_wear_evolution.py
(+19 files in other folders)
