[project]
name = "crusher-design"
version = "0.1.0"
description = "Design intelligence loop for jaw crusher parts"
requires-python = ">=3.11"
dependencies = [
    "cadquery-ocp>=7.7",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "numpy>=1.26",
    "pymoo>=0.6",
    "SALib>=1.5",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
